--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "twig/twig": "^3.5",
         "twig/intl-extra": "^3.5",
         "altorouter/altorouter": "^2.0",
-        "symfony/yaml": "^6.2"
+        "symfony/yaml": "^6.2",
+        "twig/string-extra": "^3.5"
     },
     "autoload": {
         "psr-4": {
