--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "twig/intl-extra": "^3.5",
         "altorouter/altorouter": "^2.0",
         "symfony/yaml": "^6.2",
-        "twig/string-extra": "^3.5"
+        "twig/string-extra": "^3.5",
+        "delight-im/auth": "^8.3"
     },
     "autoload": {
         "psr-4": {
